  * Added --exclude-sheet-info option for cluster listing to improve
    performance.
  * Added --include-container-info option for cluster listing to include
    container details.
  * Added --include-databases-info option for cluster listing to include
    database information.
  * CLUS-6902: Added --no-agent option for create cluster jobs to skip
    agent installation on nodes.

 -- Peter Csaszar <peter@severalnines.com>  Tue, 13 Jan 2026 15:21:55 +0100

s9s-tools (1.9.2025061016-testingubuntu1) unstable; urgency=medium

  [ Peter Csaszar ]
  * Adding new cluster type postgresql_logical.
  * Adding --cluster-id-list option for creating PostgreSql logical cluster
    of existing PostgreSql streaming replication clusters.

 -- Peter Csaszar <peter@severalnines.com>  Tue, 13 Jan 2026 15:00:00 +0100

s9s-tools (1.9.2024101022-testing) unstable; urgency=medium

  [ Peter Csaszar ]
  * Drop --psql-immediate option because it might be too confusing for our
    customers.

  [ Severalnines ]
  * Release 1.9.2023113021.
  * Release 1.9.2024022611.
  * Release 1.9.2024022611.
  * Release 1.9.2024051420.
  * Release 1.9.2024051420.
  * Release 1.9.2024051507.
  * Release 1.9.2024051507.
  * Release 1.9.2024062410.
  * Release 1.9.2024062410.
  * Release 1.9.2024082802.
  * Release 1.9.2024082802.
  * Release 1.9.2024100217.
  * Release 1.9.2024100217.
  * Release 1.9.2024112518.
  * Release 1.9.2024112518.
  * Release 1.9.2025022018.
  * Release 1.9.2025022018.
  * Release 1.9.2025032417.
  * Release 1.9.2025032417.
  * Release 1.9.2025032819.
  * Release 1.9.2025032819.
  * Release 1.9.2025041017.
  * Release 1.9.2025041017.
  * Release 1.9.2025050921.
  * Release 1.9.2025050921.

 -- Severalnines <support@severalnines.com>  Tue, 10 Jun 2025 16:02:30 +0900

s9s-tools (1.9.2023112922-release1) unstable; urgency=medium

  [ Peter Csaszar ]
  * Add --psql-immediate option to ask PostgreSql not to apply WAL when
    started in recovery mode at the end of backup restoration.
