@@ -11,6 +11,8 @@ s9s-tools (1.9.2026011315-release1) UNRELEASED; urgency=medium
     database information.
   * CLUS-6902: Added --no-agent option for create cluster jobs to skip
     agent installation on nodes.
+  * Added --refresh option to cluster and node operations to force fresh
+    data collection instead of using cached information.
 
  -- Peter Csaszar <peter@severalnines.com>  Tue, 13 Jan 2026 15:21:55 +0100
 
